manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bebop
  labels:
    istio-injection: enabled
