manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gandalfthewhite/yano-bin:latest
          ports:
            - containerPort: 4242
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bebop
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4242
      targetPort: 4242
  type: ClusterIP
