manifests/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: redsocks
          image: ncarlier/redsocks:latest
          command: ["redsocks", "-c", "/etc/redsocks/redsocks.conf"]
          volumeMounts:
            - name: redsocks-config
              mountPath: /etc/redsocks
          securityContext:
            runAsUser: 1338
            runAsGroup: 1338
            allowPrivilegeEscalation: false

        - name: frontend
          image: gandalfthewhite/cl-frontend:latest
          securityContext:
            runAsUser: 1339
            runAsGroup: 1339
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8000
          args:
            - "8000"
            - "http://backend:9000"
        - name: proxy
          image: gandalfthewhite/cl-proxy:latest
          securityContext:
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 45000
          args:
            - "45000"
            - "backend-proxy"
            - "45001"
            - "oracle"
            - "10000"
            - "0.0.0.0"
            - "p1"

      volumes:
        - name: redsocks-config
          configMap:
            name: redsocks-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bebop
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
  namespace: bebop
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 45000
      targetPort: 45000
  type: ClusterIP
